# py_api_boilerplate

./: README.md  pyproject.toml
app/: main.py
app/core/: app.py  config.py
app/core/db/: database.py
app/models/: base.py
app/repositories/: generic.py
